CKA QA/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-deploy
  name: web-deploy
  namespace: app1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-deploy
  strategy: {}
  template:
    metadata:
      labels:
        app: web-deploy
    spec:
      containers:
      - image: mycloudtutorials/poddeployservicedemo:latest
        name: poddeployservicedemo
