CKA QA/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    tier: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: frontend
  strategy: {}
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
