CKA QA/secretpod1.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: secretpod1
  name: secretpod1
spec:
  volumes:
  - name: secret1
    secret:
      secretName: secret1
  containers:
  - image: nginx
    name: secretpod1
    volumeMounts: 
     - name: secret1
       mountPath: /etc/secret1
