CKA QA/secretpod2.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: secretpod2
  name: secretpod2
spec:
  containers:
  - image: nginx
    name: secretpod2
