CKA QA/fe-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fe-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
    - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          tier: backend
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
